collection/components/input/inputCheck.css
ks-input-check {
    display: block;
    margin-bottom: 15px;
}

ks-input-check label {
    position: relative;
}

ks-input-check input {
    display: -webkit-inline-box;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;

    height: 16px;
    width: 16px;
    overflow: hidden;
    margin: 0px 8px 2px 0px;
    vertical-align: middle;
    -webkit-appearance: none;
       -moz-appearance: none;
            appearance: none;

    background-color: #e7e7e7;
    background-repeat: no-repeat;
    background-position: 50% 50%;
    border: 1px solid #ccc;

    box-sizing: border-box;
    border-radius: 0;
    font: inherit;

    -webkit-transition: .2s ease-in-out;

    transition: .2s ease-in-out;
    -webkit-transition-property: background-color,border;
    transition-property: background-color,border;
}

ks-input-check input:focus {
    outline: none;
    border-color: #222222;
}

ks-input-check[invalid] input {
    border-color: var(--color-secondary-darker);
}

ks-input-check[invalid] input:focus {
    border-color: var(--color-secondary-darker);
}

ks-input-check input:checked {
    background-color: #222222;
    border-color: transparent;
}

ks-input-check input[type="radio"] {
    border-radius: 50%;
}


ks-input-check ks-icon {
    position: absolute;
    top: 4.5px;
    left: 0.7px;
    color: #e7e7e7;
}

ks-input-check input[type="radio"]:checked::after {
    content: "";
    background-color: white;

    margin-top: 0px;
    width: 6px;
    height: 6px;
    border-radius: 50%;
}

ks-input-check[invalid] span {
    color: var(--color-secondary-darker);
}

ks-input-check[invalid] p {
    margin: 10px 0px 0px 0px;
    color: var(--color-secondary-darker);
    font-weight: 700;
}



ks-input-check[large] label {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}

ks-input-check[large] label input {
    width: 32px;
    height: 32px;
    margin: 1px 12px 2px 0px;
}

ks-input-check[large] label span {
    width: 100%;
}


ks-input-check[large] input:checked::after {
    margin-top: 2px;
    font-size: 18px;
}

ks-input-check[large] input[type="radio"]:checked::after {
    margin-top: 0px;
    width: 16px;
    height: 16px;
}

ks-input-check[large] p {
    margin-left: 40px;
}

